--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=7.6.0"
   },
   "scripts": {
-    "start": "node cluster.js",
+    "start": "cross-env NODE_PATH=. node index.js ",
     "dev": "cross-env NODE_PATH=. NODE_ENV=development nodemon",
     "test": "npm run test:all",
     "test:all": "npm run test:unit && npm run test:features",
